k8s/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-dashboard-ingress
  namespace: bronze
  labels:
    app: metrics-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - intics.elevance.ngrok.dev
    secretName: metrics-dashboard-tls
  rules:
  - host: intics.elevance.ngrok.dev
    http:
      paths:
      - path: /ingestionmetrics/api
        pathType: Prefix
        backend:
          service:
            name: metrics-dashboard-backend
            port:
              number: 8181
      - path: /ingestionmetrics/swagger-ui
        pathType: Prefix
        backend:
          service:
            name: metrics-dashboard-backend
            port:
              number: 8181
      - path: /ingestionmetrics/v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: metrics-dashboard-backend
            port:
              number: 8181
      - path: /ingestionmetrics/
        pathType: Prefix
        backend:
          service:
            name: metrics-dashboard-frontend
            port:
              number: 5000
